--- a/MotionCamera/src/main/AndroidManifest.xml
+++ b/MotionCamera/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:minSdkVersion="7"
         android:targetSdkVersion="19" />
 
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
